Bug 493429 - Bug reporting link doesn’t take the user to a bug report page
Summary: Bug reporting link doesn’t take the user to a bug report page
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-21 11:32 UTC by Karl Ove Hufthammer
Modified: 2024-10-01 11:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2024-09-21 11:32:41 UTC
SUMMARY
The bug reporting link in Tokodon takes the user to a list of open Tokodon bugs, not to a page for reporting a bug in Tokodon. There are no obvious way to report a bug in Tokodon from the page the user is taken to.


STEPS TO REPRODUCE
1. Click Settings icon
2. Click About Tokodon
3. Click Report Bug

OBSERVED RESULT
The user is taken to this URL: https://bugs.kde.org/describecomponents.cgi?product=tokodon


EXPECTED RESULT
The user is taken to a page for reporting bugs in Tokodon, preferably with all fields (e.g., version information) automatically filled out.


SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240919
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
Kernel Version: 6.10.9-1-default (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-2500 CPU @ 3.30GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1060 3GB/PCIe/SSE2
Comment 1 Justin Zobel 2024-09-24 11:14:43 UTC
I've placed a merge request in to change the URL to the bug report entry page.

As for the version being pre-filled that does sound like a good idea, can you file a new bug report for that as it likely requires code changes.
Comment 2 Carl Schwan 2024-10-01 11:26:18 UTC
Git commit 6fe0ea44f815700968a61435af85ac347f6c8fd1 by Carl Schwan, on behalf of Justin Zobel.
Committed on 01/10/2024 at 11:26.
Pushed by carlschwan into branch 'master'.

Change bug reporting URL to the bug entry page.

M  +1    -1    src/main.cpp

https://invent.kde.org/network/tokodon/-/commit/6fe0ea44f815700968a61435af85ac347f6c8fd1
Comment 3 Carl Schwan 2024-10-01 11:26:30 UTC
Git commit 5c1942d63c16927d0d5fe601e06f0ed6f38e86ce by Carl Schwan.
Committed on 01/10/2024 at 11:26.
Pushed by carlschwan into branch 'release/24.08'.

Change bug reporting URL to the bug entry page.


(cherry picked from commit 6fe0ea44f815700968a61435af85ac347f6c8fd1)

8e26a9ee Change bug reporting URL to the bug entry page.

Co-authored-by: Justin Zobel <justin.zobel@gmail.com>

M  +1    -1    src/main.cpp

https://invent.kde.org/network/tokodon/-/commit/5c1942d63c16927d0d5fe601e06f0ed6f38e86ce