Change bug reporting URL to the bug entry page.

BUG: 493429